Add interface and Console/Queue loggers

--- a/FourWallsInterview/FourWallsInterview.csproj
+++ b/FourWallsInterview/FourWallsInterview.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="QueueLogger.cs" />
+    <Compile Include="ConsoleLogger.cs" />
+    <Compile Include="IMessageLogger.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
